about us section, smart work section added

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hero</title>
+    <title>Second Brain</title>
     <link rel="stylesheet" href="/style/style.css">
 </head>
 
@@ -101,6 +101,140 @@
             </div>
         </section>
         <!-- limited time deal alert END  -->
+
+
+        <!-- about us START  -->
+        <section class="about-us-section-container">
+            <div class="about-us-bg">
+                <img class="img" src="/assets/images/about-us/about-us-bg.png" alt="">
+            </div>
+            <div class="about-us-section m-width">
+                <div class="content">
+                    <p class="heading">About Us</p>
+                    <p class="description">We are a company that has developed a powerful tool to help you rewrite
+                        content with ease. Our chrome extension integrates with open AI, allowing you to use its
+                        capabilities with just a click of a mouse. With our software, you can save time and streamline
+                        your content creation process without having to go through the hassle of opening Chat GPT every
+                        time. We are committed to providing you with a hassle-free experience, so you can focus on what
+                        matters most – your business.</p>
+
+                    <div class="get-started">
+                        <p>GET STARTED</p>
+                    </div>
+                </div>
+                <div class="image-content">
+                    <div class="img-box">
+                        <img class="img" src="/assets/images/about-us/about-us-cartoon.png" alt="">
+                    </div>
+                    <div class="img-box-bg">
+                        <img src="/assets/images/about-us/about-us-cartoon-bg.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- about us END  -->
+
+
+
+
+        <!-- what can START  -->
+        <section class="what-can-section-container">
+            <div class="what-can-bg">
+                <img class="img" src="/assets/images/what-can/what-can-bg.png" alt="">
+            </div>
+            <div class="what-can-top-left">
+                <img class="img" src="/assets/images/what-can/what-can-top-left.png" alt="">
+            </div>
+            <div class="what-can-bottom-right">
+                <img class="img" src="/assets/images/what-can/what-can-bottom-right.png" alt="">
+            </div>
+            <div class="what-can-section m-width">
+                <p class="heading">What can Second Brain for you</p>
+
+                <div class="item-box">
+                    <div class="single-item">
+                        <p>Facebook Ads</p>
+                    </div>
+                    <div class="single-item">
+                        <p>LinkedIn Ads</p>
+                    </div>
+                    <div class="single-item">
+                        <p>Google Ads</p>
+                    </div>
+                    <div class="single-item">
+                        <p>Open AI</p>
+                    </div>
+                    <div class="single-item">
+                        <p>SEO Meta Tags</p>
+                    </div>
+                    <div class="single-item">
+                        <p>Asana</p>
+                    </div>
+                    <div class="single-item">
+                        <p>Product Descriptions</p>
+                    </div>
+                    <div class="single-item">
+                        <p>Landing Pages</p>
+                    </div>
+                    <div class="single-item">
+                        <p>YouTube Descriptions</p>
+                    </div>
+                    <div class="single-item">
+                        <p>Quora Answers</p>
+                    </div>
+                    <div class="single-item">
+                        <p>Emails & Messages</p>
+                    </div>
+                    <div class="single-item">
+                        <p>Rewrite</p>
+                    </div>
+                    <div class="single-item">
+                        <p>User Friendly</p>
+                    </div>
+                    <div class="single-item">
+                        <p>Productivity</p>
+                    </div>
+                    <div class="single-item">
+                        <p>Instagram Ads</p>
+                    </div>
+                    <div class="single-item">
+                        <p>Content Creation</p>
+                    </div>
+                </div>
+
+                <div class="get-started">
+                    <p>GET STARTED</p>
+                </div>
+            </div>
+        </section>
+        <!-- what can END  -->
+
+
+
+
+        <!-- smarter work START  -->
+        <section class="smarter-work-section-container">
+            <div class="smarter-work-section m-width">
+                <div class="content-text">
+                    <p class="heading">Write Smarter, Not <br> Harder: The Must- <br> Have Chrome Extension <br>
+                        Software Is Here!</p>
+                    <p class="description">Step up your writing game today and join the <br> thousands of satisfied
+                        users who have transformed <br> their content with our software</p>
+                    <div class="get-started">
+                        <p>GET STARTED</p>
+                    </div>
+                </div>
+                <div class="card-box">
+                    <div class="single-item">
+                        <img class="img" src="/assets/images/smarter-work/rewrite-icon.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="content-image">
+                <img class="img" src="/assets/images/smarter-work/smarter-work.png" alt="">
+            </div>
+        </section>
+        <!-- smarter work END  -->
 </body>
 
 </html>
