smarter work section added with responsive

--- a/index.html
+++ b/index.html
@@ -216,17 +216,49 @@
         <section class="smarter-work-section-container">
             <div class="smarter-work-section m-width">
                 <div class="content-text">
-                    <p class="heading">Write Smarter, Not <br> Harder: The Must- <br> Have Chrome Extension <br>
-                        Software Is Here!</p>
-                    <p class="description">Step up your writing game today and join the <br> thousands of satisfied
-                        users who have transformed <br> their content with our software</p>
-                    <div class="get-started">
-                        <p>GET STARTED</p>
+                    <div class="left-content">
+                        <p class="heading">Write Smarter, Not <br> Harder: The Must- <br> Have Chrome Extension <br>
+                            Software Is Here!</p>
+                        <p class="description">Step up your writing game today and join the <br> thousands of satisfied
+                            users who have transformed <br> their content with our software</p>
+                        <div class="get-started">
+                            <p>GET STARTED</p>
+                        </div>
+                    </div>
+                    <div class="responsive-content-image">
+                        <img class="img" src="/assets/images/smarter-work/smarter-work.png" alt="">
                     </div>
                 </div>
                 <div class="card-box">
                     <div class="single-item">
                         <img class="img" src="/assets/images/smarter-work/rewrite-icon.png" alt="">
+                        <p>Rewrite Content in</p>
+                        <p> an INSTANT</p>
+                    </div>
+                    <div class="single-item">
+                        <img class="img" src="/assets/images/smarter-work/rewrite-icon.png" alt="">
+                        <p>Rewrite Content in</p>
+                        <p> an INSTANT</p>
+                    </div>
+                    <div class="single-item">
+                        <img class="img" src="/assets/images/smarter-work/rewrite-icon.png" alt="">
+                        <p>Rewrite Content in</p>
+                        <p> an INSTANT</p>
+                    </div>
+                    <div class="single-item">
+                        <img class="img" src="/assets/images/smarter-work/rewrite-icon.png" alt="">
+                        <p>Rewrite Content in</p>
+                        <p> an INSTANT</p>
+                    </div>
+                    <div class="single-item">
+                        <img class="img" src="/assets/images/smarter-work/rewrite-icon.png" alt="">
+                        <p>Rewrite Content in</p>
+                        <p> an INSTANT</p>
+                    </div>
+                    <div class="single-item">
+                        <img class="img" src="/assets/images/smarter-work/rewrite-icon.png" alt="">
+                        <p>Rewrite Content in</p>
+                        <p> an INSTANT</p>
                     </div>
                 </div>
             </div>
