footer section added

--- a/index.html
+++ b/index.html
@@ -225,9 +225,6 @@
                             <p>GET STARTED</p>
                         </div>
                     </div>
-                    <div class="responsive-content-image">
-                        <img class="img" src="/assets/images/smarter-work/smarter-work.png" alt="">
-                    </div>
                 </div>
                 <div class="card-box">
                     <div class="single-item">
@@ -267,6 +264,16 @@
             </div>
         </section>
         <!-- smarter work END  -->
+
+
+
+
+
+        <!-- footer START  -->
+        <section class="footer-section-container">
+            <p>© 2023-24 Second Brain. All rights reserved. Privacy Policy | Terms of use | Cookie Policy</p>
+        </section>
+        <!-- footer END  -->
 </body>
 
 </html>
