got question section left side added

--- a/index.html
+++ b/index.html
@@ -212,6 +212,40 @@
 
 
 
+        <!-- got question START  -->
+        <section class="got-question-section-container">
+            <div class="got-question-bg">
+                <img class="img" src="/assets/images/got-questions/got-question-bg.png" alt="">
+            </div>
+            <div class="got-question-left">
+                <img class="img" src="/assets/images/got-questions/bg-new.png" alt="">
+            </div>
+            <div class="got-question-bottom-right">
+                <img class="img" src="/assets/images/got-questions/got-question-upper.png" alt="">
+            </div>
+            <div class="got-question-section">
+                <p class="heading">Got Questions? We've Got Answers!</p>
+                <p class="description">Find essential things you need to know about our software and how it can help
+                    you.</p>
+
+                <div class="item-box-container">
+                    <div class="robot">
+                        <img class="img" src="/assets/images/got-questions/got-question-robot.png" alt="">
+                        <img class="robot-bg" src="/assets/images/got-questions/robot-bg.png" alt="">
+                    </div>
+                    <div class="faq-container">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur a nemo corporis saepe?
+                            Alias delectus voluptates deleniti recusandae autem veritatis magnam nam illum rem, possimus
+                            et eius iste at expedita!</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- got question END  -->
+
+
+
+
         <!-- smarter work START  -->
         <section class="smarter-work-section-container">
             <div class="smarter-work-section m-width">
