according problem on got question section

--- a/index.html
+++ b/index.html
@@ -234,9 +234,44 @@
                         <img class="robot-bg" src="/assets/images/got-questions/robot-bg.png" alt="">
                     </div>
                     <div class="faq-container">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur a nemo corporis saepe?
-                            Alias delectus voluptates deleniti recusandae autem veritatis magnam nam illum rem, possimus
-                            et eius iste at expedita!</p>
+                        <div class="accordion">
+                            <div class="accordion-item">
+                                <div class="accordion-title">Accordion Title 1</div>
+                                <div class="accordion-content">Accordion Content 1 Lorem ipsum dolor sit amet
+                                    consectetur adipisicing elit.
+                                    Hic
+                                    placeat maiores porro architecto repellendus? Numquam modi, voluptatibus laboriosam
+                                    cupiditate earum
+                                    nobis
+                                    accusamus quam temporibus deleniti vitae ipsam rem ratione assumenda.</div>
+                            </div>
+                            <div class="accordion-item active">
+                                <div class="accordion-title">Accordion Title 2</div>
+                                <div class="accordion-content">Accordion Content 2 Lorem ipsum, dolor sit amet
+                                    consectetur adipisicing elit.
+                                    Laudantium officiis nam earum enim laboriosam saepe placeat eum consequatur cum?
+                                    Laboriosam assumenda
+                                    voluptatibus, cum repellat illum vitae optio temporibus nemo quia!</div>
+                            </div>
+                            <div class="accordion-item">
+                                <div class="accordion-title">Accordion Title 3</div>
+                                <div class="accordion-content">Accordion Content 3 Lorem ipsum dolor sit amet
+                                    consectetur adipisicing elit.
+                                    Provident ad cumque minima sed consequatur quod at? Laborum reprehenderit eos esse,
+                                    voluptatum vitae
+                                    ipsam?
+                                    Soluta quo et, cum consequatur maxime magnam!</div>
+                            </div>
+                            <div class="accordion-item">
+                                <div class="accordion-title">Accordion Title 4</div>
+                                <div class="accordion-content">Accordion Content 4 Lorem ipsum dolor sit amet
+                                    consectetur adipisicing elit.
+                                    Provident ad cumque minima sed consequatur quod at? Laborum reprehenderit eos esse,
+                                    voluptatum vitae
+                                    ipsam?
+                                    Soluta quo et, cum consequatur maxime magnam!</div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -308,6 +343,10 @@
             <p>© 2023-24 Second Brain. All rights reserved. Privacy Policy | Terms of use | Cookie Policy</p>
         </section>
         <!-- footer END  -->
+
+
+        <script src="/index.js"></script>
+
 </body>
 
 </html>
