accordion works on got-question section

--- a/index.html
+++ b/index.html
@@ -236,40 +236,37 @@
                     <div class="faq-container">
                         <div class="accordion">
                             <div class="accordion-item">
-                                <div class="accordion-title">Accordion Title 1</div>
-                                <div class="accordion-content">Accordion Content 1 Lorem ipsum dolor sit amet
-                                    consectetur adipisicing elit.
-                                    Hic
-                                    placeat maiores porro architecto repellendus? Numquam modi, voluptatibus laboriosam
-                                    cupiditate earum
-                                    nobis
-                                    accusamus quam temporibus deleniti vitae ipsam rem ratione assumenda.</div>
+                                <div class="accordion-title">What is your software?</div>
+                                <div class="accordion-content">Our software for a browser is a small software program that extends the functionality of a web browser. These extensions, also known as add-ons or plugins, are designed to customize and enhance the browsing experience by adding new features or modifying existing ones within the browser environment.</div>
                             </div>
                             <div class="accordion-item active">
-                                <div class="accordion-title">Accordion Title 2</div>
-                                <div class="accordion-content">Accordion Content 2 Lorem ipsum, dolor sit amet
-                                    consectetur adipisicing elit.
-                                    Laudantium officiis nam earum enim laboriosam saepe placeat eum consequatur cum?
-                                    Laboriosam assumenda
-                                    voluptatibus, cum repellat illum vitae optio temporibus nemo quia!</div>
+                                <div class="accordion-title">How does your software work?</div>
+                                <div class="accordion-content">With our software, you can rewrite content with just one
+                                    click of the mouse. Our chrome extension integrates with OpenAI/Chat GPT, so you
+                                    don’t have to go through the hassle of opening the app every time.</div>
                             </div>
                             <div class="accordion-item">
-                                <div class="accordion-title">Accordion Title 3</div>
-                                <div class="accordion-content">Accordion Content 3 Lorem ipsum dolor sit amet
-                                    consectetur adipisicing elit.
-                                    Provident ad cumque minima sed consequatur quod at? Laborum reprehenderit eos esse,
-                                    voluptatum vitae
-                                    ipsam?
-                                    Soluta quo et, cum consequatur maxime magnam!</div>
+                                <div class="accordion-title">Is your software easy to use?</div>
+                                <div class="accordion-content">Browser extension software is generally designed to be user-friendly and easy to use. Installing an extension usually involves a few clicks. Users can typically find and add extensions from their browser's extension store by clicking a button to install.</div>
                             </div>
                             <div class="accordion-item">
-                                <div class="accordion-title">Accordion Title 4</div>
-                                <div class="accordion-content">Accordion Content 4 Lorem ipsum dolor sit amet
-                                    consectetur adipisicing elit.
-                                    Provident ad cumque minima sed consequatur quod at? Laborum reprehenderit eos esse,
-                                    voluptatum vitae
-                                    ipsam?
-                                    Soluta quo et, cum consequatur maxime magnam!</div>
+                                <div class="accordion-title">What is Chat GPT?</div>
+                                <div class="accordion-content">ChatGPT is a conversational AI model developed by OpenAI. It's based on the GPT (Generative Pre-trained Transformer) architecture, specifically designed to understand and generate human-like text based on the input it receives.</div>
+                            </div>
+                            <div class="accordion-item">
+                                <div class="accordion-title">How much does your software cost?</div>
+                                <div class="accordion-content">The pricing model for browser extensions varies based on their complexity, the value they provide, ongoing support, and the target audience. Users can explore extension stores like the Chrome Web Store, Firefox Add-ons, or others to find a range of free and paid extensions.</div>
+                            </div>
+                            <div class="accordion-item">
+                                <div class="accordion-title">Can I cancel my subscription anytime?</div>
+                                <div class="accordion-content">The ability to cancel a subscription at any time after signing up for a service can depend on the specific service and the terms and conditions of the subscription.
+                                    Most of the cases, services may allow subscribers to cancel their subscriptions at any time with no penalties or fees.</div>
+                            </div>
+                            <div class="accordion-item">
+                                <div class="accordion-title">Is there a free trial?</div>
+                                <div class="accordion-content">Free trials typically grant access to all or most features of the extension for a set period, such as 7 days, 14 days, or a month.
+                                    You might be required to sign up or create an account to activate the free trial.
+                                    </div>
                             </div>
                         </div>
                     </div>
