style folder re-structure added

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
         <!-- hero section START  -->
         <div class="hero-section-container">
             <div class="hero-background">
-                <img class="img" src="/assets//images/hero-section/hero-background.png" alt="">
+                <img class="img" src="/assets/images/hero-section/hero-background.png" alt="">
             </div>
             <div class="top-right-hero-bg">
-                <img class="img" src="/assets//images/hero-section/top-right-hero-bg.png" alt="">
+                <img class="img" src="/assets/images/hero-section/top-right-hero-bg.png" alt="">
             </div>
             <div class="bottom-left-hero-bg">
-                <img class="img" src="/assets//images/hero-section/bottom-left-bg.png" alt="">
+                <img class="img" src="/assets/images/hero-section/bottom-left-bg.png" alt="">
             </div>
             <section class="hero-section-main m-width">
                 <div class="nav-bar">
@@ -58,7 +58,7 @@
         <!-- limited time deal alert START  -->
         <section class="limited-section-container">
             <div class="limited-time-bg">
-                <img class="img" src="/assets/images/hero-section/limited-time-deal.png" alt="">
+                <img class="img" src="/assets/images/limited-time-deal/limited-time-deal.png" alt="">
             </div>
             <div class="limited-section m-width">
                 <div class="content-heading">
@@ -76,7 +76,7 @@
                         </p>
                     </div>
                     <div class="single-box">
-                        <img src="/assets/images/hero-section/text-front-gradient.png" alt="">
+                        <img src="/assets/images/limited-time-deal/text-front-gradient.png" alt="">
                         <p class="title">Rewrite Content Like a Pro:</p>
                         <p class="description">
                             With Our Chrome Extension, You Can Edit Your Writing with Ease and Confidence, No Matter
@@ -84,7 +84,7 @@
                         </p>
                     </div>
                     <div class="single-box">
-                        <img src="/assets/images/hero-section/thumb-up-front-gradient.png" alt="">
+                        <img src="/assets/images/limited-time-deal/thumb-up-front-gradient.png" alt="">
                         <p class="title">Unlock Your Writing Potential:</p>
                         <p class="description">
                             Our Innovative Software Helps You Overcome Writer's Block and Empowers You to Write with
@@ -133,8 +133,6 @@
             </div>
         </section>
         <!-- about us END  -->
-
-
 
 
         <!-- what can START  -->
@@ -210,8 +208,6 @@
         <!-- what can END  -->
 
 
-
-
         <!-- got question START  -->
         <section class="got-question-section-container">
             <div class="got-question-bg">
@@ -237,7 +233,10 @@
                         <div class="accordion">
                             <div class="accordion-item">
                                 <div class="accordion-title">What is your software?</div>
-                                <div class="accordion-content">Our software for a browser is a small software program that extends the functionality of a web browser. These extensions, also known as add-ons or plugins, are designed to customize and enhance the browsing experience by adding new features or modifying existing ones within the browser environment.</div>
+                                <div class="accordion-content">Our software for a browser is a small software program
+                                    that extends the functionality of a web browser. These extensions, also known as
+                                    add-ons or plugins, are designed to customize and enhance the browsing experience by
+                                    adding new features or modifying existing ones within the browser environment.</div>
                             </div>
                             <div class="accordion-item active">
                                 <div class="accordion-title">How does your software work?</div>
@@ -247,26 +246,39 @@
                             </div>
                             <div class="accordion-item">
                                 <div class="accordion-title">Is your software easy to use?</div>
-                                <div class="accordion-content">Browser extension software is generally designed to be user-friendly and easy to use. Installing an extension usually involves a few clicks. Users can typically find and add extensions from their browser's extension store by clicking a button to install.</div>
+                                <div class="accordion-content">Browser extension software is generally designed to be
+                                    user-friendly and easy to use. Installing an extension usually involves a few
+                                    clicks. Users can typically find and add extensions from their browser's extension
+                                    store by clicking a button to install.</div>
                             </div>
                             <div class="accordion-item">
                                 <div class="accordion-title">What is Chat GPT?</div>
-                                <div class="accordion-content">ChatGPT is a conversational AI model developed by OpenAI. It's based on the GPT (Generative Pre-trained Transformer) architecture, specifically designed to understand and generate human-like text based on the input it receives.</div>
+                                <div class="accordion-content">ChatGPT is a conversational AI model developed by OpenAI.
+                                    It's based on the GPT (Generative Pre-trained Transformer) architecture,
+                                    specifically designed to understand and generate human-like text based on the input
+                                    it receives.</div>
                             </div>
                             <div class="accordion-item">
                                 <div class="accordion-title">How much does your software cost?</div>
-                                <div class="accordion-content">The pricing model for browser extensions varies based on their complexity, the value they provide, ongoing support, and the target audience. Users can explore extension stores like the Chrome Web Store, Firefox Add-ons, or others to find a range of free and paid extensions.</div>
+                                <div class="accordion-content">The pricing model for browser extensions varies based on
+                                    their complexity, the value they provide, ongoing support, and the target audience.
+                                    Users can explore extension stores like the Chrome Web Store, Firefox Add-ons, or
+                                    others to find a range of free and paid extensions.</div>
                             </div>
                             <div class="accordion-item">
                                 <div class="accordion-title">Can I cancel my subscription anytime?</div>
-                                <div class="accordion-content">The ability to cancel a subscription at any time after signing up for a service can depend on the specific service and the terms and conditions of the subscription.
-                                    Most of the cases, services may allow subscribers to cancel their subscriptions at any time with no penalties or fees.</div>
+                                <div class="accordion-content">The ability to cancel a subscription at any time after
+                                    signing up for a service can depend on the specific service and the terms and
+                                    conditions of the subscription.
+                                    Most of the cases, services may allow subscribers to cancel their subscriptions at
+                                    any time with no penalties or fees.</div>
                             </div>
                             <div class="accordion-item">
                                 <div class="accordion-title">Is there a free trial?</div>
-                                <div class="accordion-content">Free trials typically grant access to all or most features of the extension for a set period, such as 7 days, 14 days, or a month.
+                                <div class="accordion-content">Free trials typically grant access to all or most
+                                    features of the extension for a set period, such as 7 days, 14 days, or a month.
                                     You might be required to sign up or create an account to activate the free trial.
-                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -274,8 +286,6 @@
             </div>
         </section>
         <!-- got question END  -->
-
-
 
 
         <!-- smarter work START  -->
@@ -332,9 +342,6 @@
         <!-- smarter work END  -->
 
 
-
-
-
         <!-- footer START  -->
         <section class="footer-section-container">
             <p>© 2023-24 Second Brain. All rights reserved. Privacy Policy | Terms of use | Cookie Policy</p>
@@ -342,7 +349,9 @@
         <!-- footer END  -->
 
 
-        <script src="/index.js"></script>
+        <!-- script START -->
+        <script src="/js/app.js"></script>
+        <!-- script END -->
 
 </body>
 
